# f200-scanner

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  camerawrapper.cpp  camerawrapper.h  converter.cpp  converter.h  frame.cpp  frame.h  helper.cpp  helper.h  main.cpp  tracker.cpp  tracker.h  tracking.cpp  tracking.h  wiki.html
files/: calibration.yml  chessinfo_meter.yml
